<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lib_pp_white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ll_camera_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_camera_photo"
                    android:layout_width="240dp"
                    android:layout_height="240dp"
                    android:scaleType="centerInside"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:text="@string/lib_pp_info_title_type"
                            android:textColor="@color/lib_pp_info_title_black"
                            android:textSize="@dimen/lib_pp_info_font_size" />

                        <TextView
                            android:id="@+id/tv_camera_info_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:textColor="@color/lib_pp_info_black"
                            android:textSize="@dimen/lib_pp_info_font_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:text="@string/lib_pp_info_title_country_code"
                            android:textColor="@color/lib_pp_info_title_black"
                            android:textSize="@dimen/lib_pp_info_font_size" />

                        <TextView
                            android:id="@+id/tv_camera_info_country_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:textColor="@color/lib_pp_info_black"
                            android:textSize="@dimen/lib_pp_info_font_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:text="@string/lib_pp_info_title_passport_no"
                            android:textColor="@color/lib_pp_info_title_black"
                            android:textSize="@dimen/lib_pp_info_font_size" />

                        <TextView
                            android:id="@+id/tv_camera_info_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:textColor="@color/lib_pp_info_black"
                            android:textSize="@dimen/lib_pp_info_font_size" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="@string/lib_pp_info_title_surname"
                        android:textColor="@color/lib_pp_info_title_black"
                        android:textSize="@dimen/lib_pp_info_font_size" />

                    <TextView
                        android:id="@+id/tv_camera_info_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:textColor="@color/lib_pp_info_black"
                        android:textSize="@dimen/lib_pp_info_font_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="@string/lib_pp_info_title_given_name"
                        android:textColor="@color/lib_pp_info_title_black"
                        android:textSize="@dimen/lib_pp_info_font_size" />

                    <TextView
                        android:id="@+id/tv_camera_info_given_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:textColor="@color/lib_pp_info_black"
                        android:textSize="@dimen/lib_pp_info_font_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:text="@string/lib_pp_info_title_date_of_birth"
                            android:textColor="@color/lib_pp_info_title_black"
                            android:textSize="@dimen/lib_pp_info_font_size" />

                        <TextView
                            android:id="@+id/tv_camera_info_date_of_birth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:textColor="@color/lib_pp_info_black"
                            android:textSize="@dimen/lib_pp_info_font_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:text="@string/lib_pp_info_title_gender"
                            android:textColor="@color/lib_pp_info_title_black"
                            android:textSize="@dimen/lib_pp_info_font_size" />

                        <TextView
                            android:id="@+id/tv_camera_info_gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:textColor="@color/lib_pp_info_black"
                            android:textSize="@dimen/lib_pp_info_font_size" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="@string/lib_pp_info_title_nationality"
                        android:textColor="@color/lib_pp_info_title_black"
                        android:textSize="@dimen/lib_pp_info_font_size" />

                    <TextView
                        android:id="@+id/tv_camera_info_nationality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:textColor="@color/lib_pp_info_black"
                        android:textSize="@dimen/lib_pp_info_font_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:text="@string/lib_pp_info_title_date_of_expiry"
                            android:textColor="@color/lib_pp_info_title_black"
                            android:textSize="@dimen/lib_pp_info_font_size" />

                        <TextView
                            android:id="@+id/tv_camera_info_date_of_expiry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:textColor="@color/lib_pp_info_black"
                            android:textSize="@dimen/lib_pp_info_font_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:text="@string/lib_pp_info_title_optional_info"
                            android:textColor="@color/lib_pp_info_title_black"
                            android:textSize="@dimen/lib_pp_info_font_size" />

                        <TextView
                            android:id="@+id/tv_camera_info_optional_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:textColor="@color/lib_pp_info_black"
                            android:textSize="@dimen/lib_pp_info_font_size" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lib_pp_info_title_auth_result"
                        android:textColor="@color/lib_pp_info_title_black"
                        android:textSize="@dimen/lib_pp_info_font_size" />

                    <TextView
                        android:id="@+id/tv_camera_info_auth_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/lib_pp_info_black"
                        android:textSize="@dimen/lib_pp_info_font_size" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <com.hf.passport.camera.CameraSourcePreview
            android:id="@+id/camera_source_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.hf.passport.other.GraphicOverlay
                android:id="@+id/graphics_overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.hf.passport.camera.CameraSourcePreview>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_margin="40dp"
            android:background="@drawable/border_background" />

        <View
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/border_background" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_camera_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="#44000000"
        android:gravity="center"
        android:lineSpacingExtra="16dp"
        android:text="@string/lib_pp_tip_step_6"
        android:textColor="#ffffff"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_camera_info_mrz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:gravity="center_horizontal"
            android:textColor="@color/lib_pp_info_black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_camera_return"
            android:layout_width="160dp"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/pp_selector_btn_blue"
            android:text="@string/lib_pp_return"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/lib_pp_white"
            android:textSize="20sp"
            android:visibility="visible" />
    </LinearLayout>
</RelativeLayout>